--- a/NR/NRApp/templates/admins.html
+++ b/NR/NRApp/templates/admins.html
@@ -18,6 +18,7 @@
                     <th>Address</th>
                     <th>Phone Number</th>
                     <th>Email</th>
+                    <th>Role</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,6 +29,7 @@
                     <td>{{ admin.admin_address }}</td>
                     <td>{{ admin.phone_number }}</td>
                     <td>{{ admin.email }}</td>
+                    <td>{{ admin.is_admin }}</td>
                     
                 </tr>
                 {% endfor %}
