--- a/NR/NRApp/templates/approval.html
+++ b/NR/NRApp/templates/approval.html
@@ -23,7 +23,7 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">Business Email</th>
-                                    <td>{{ user.email }}</td> 
+                                    <td>{{ user.obligor_email }}</td> 
                                 </tr>
                                 <tr>
                                     <th scope="row">Application ID</th>
