--- a/NR/NRApp/templates/prediction.html
+++ b/NR/NRApp/templates/prediction.html
@@ -6,7 +6,7 @@
         <div class="card-header bg-success text-white text-center">
             <h2>Prediction Status Page</h2>
         </div>
-
+<!--     card -->
 
         <div class="card-body">
             <form method="POST" action="{{ url_for('predict') }}">
